TRUNK-6591 Clean up codebase by fixing Sonar issues and improving coding standards